<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/background"
            android:src="@drawable/sky"
            android:scaleX="1.5"
            android:scaleY="2"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:weightSum="1">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_today"
                    android:id="@+id/button_today"
                    android:layout_weight="0.5"
                    android:background="@android:color/transparent"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_tomorrow"
                    android:id="@+id/button_tomorrow"
                    android:layout_weight="0.5"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:weightSum="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/location_name"
                    android:id="@+id/location"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginRight="20dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginRight="20dp"
                    android:text="@string/date"
                    android:id="@+id/textView2"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:textColor="#ffffff"/>
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/umbrella"
                    android:layout_weight="0.7"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/umbrella_suggestion"
                    android:id="@+id/rain_suggestion"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffffff"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rain_probabiloty_title"
                        android:id="@+id/rain_percentage"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="0.5"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rain_intensity_title"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:id="@+id/rain_intensity"
                        android:layout_weight="0.5"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rain_probabiloty_value"
                        android:id="@+id/rain_percentage_value"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="0.5"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rain_intensity_value"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:id="@+id/rain_intensity_value"
                        android:layout_weight="0.5"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:weightSum="1"
                android:background="#80FFFFFF">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:background="#336699">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/morning"
                        android:id="@+id/morning_hour"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/noon"
                        android:id="@+id/noon_hour"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/evening"
                        android:id="@+id/evening_hour"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/night"
                        android:id="@+id/night_hour"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>